# interaction

./: Cargo.toml  LICENSE  README.md  build.rs  settings.gradle
.cargo/: config
app/: build.gradle
app/src/androidTest/java/com/atls/aeterna/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/atls/aeterna/interaction/: ExampleInstrumentedTest.java
app/src/androidTest/java/team/atls/aeterna/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/atls/aeterna/: MainActivity.java  OverlayService.java
app/src/main/java/com/atls/aeterna/interaction/: MainActivity.java  OverlayService.java  WebService.java
app/src/main/java/team/atls/aeterna/: InternalPointerMarker.java  JNIReachabilityFence.java  MainActivity.kt  PokerBros.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/atls/aeterna/: ExampleUnitTest.java
app/src/test/java/com/atls/aeterna/interaction/: ExampleUnitTest.java
app/src/test/java/team/atls/aeterna/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/: java_glue.rs.in  lib.rs  shared.rs
