[package]
name = "interaction"
version = "0.0.1"
build = "build.rs"
edition = "2018"

[lib]
name = "interaction"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.10"
jni-sys = "0.3.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
flapigen = "0.6.0-pre7"
env_logger = "0.8"
